# vxcc-new

./: Cargo.toml  README.md
.github/workflows/: rust.yml
crates/vxcc-base-dialect/: Cargo.toml
crates/vxcc-base-dialect/src/: lib.rs
crates/vxcc-dialect-parser/: Cargo.toml
crates/vxcc-dialect-parser/src/: lib.rs
crates/vxcc-dialect-parser/tests/: test.rs
crates/vxcc-ir/: Cargo.toml  README.md
crates/vxcc-ir/src/: core_dialect.rs  lib.rs  types.rs  types_tests.rs  vxcc_core_dialect.rs
crates/vxcc-num-dialect/: Cargo.toml
crates/vxcc-num-dialect/src/: lib.rs
crates/vxcc-type-parser/: Cargo.toml
crates/vxcc-type-parser-proc/: Cargo.toml
crates/vxcc-type-parser-proc/src/: lib.rs
crates/vxcc-type-parser-proc/tests/: test.rs
crates/vxcc-type-parser/src/: lib.rs
crates/vxcc-type-parser/tests/: test.rs
