[package]
name = "vxcc-dialect-parser"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
vxcc-type-parser = { path = "../vxcc-type-parser/" }
proc-macro2 = "1.0.95"
quote = "1.0.40"
chumsky = { version = "^0.10.0", features = ["std"], default-features = false }
chumsky-proc-macro = "0.1.6"

[dev-dependencies]
vxcc-ir = { path = "../vxcc-ir/" }
