[package]
name = "vxcc-ir"
version = "0.1.0"
edition = "2024"

[features]
quote = ["dep:quote", "dep:proc-macro2"]
default = []

[dependencies]
itertools = "0.14.0"
lazy_static = "1.5.0"
thiserror = "2.0.12"
tinyvec = "1.9.0"

quote = { version = "1.0.40", optional = true }
proc-macro2 = { version = "1.0.95", optional = true }
