[package]
name = "vxcc-ir"
version = "0.1.0"
edition = "2024"

[features]
default = []
quote = ["dep:quote", "dep:proc-macro2"]

[dependencies]
itertools = { version = "0.14.0", default-features = false, features = ["use_std"] }
quid = { version = "^0.1.1", default-features = false, features = ["fmt", "std"] }

quote = { version = "1.0.40", optional = true }
proc-macro2 = { version = "1.0.95", optional = true }
